# gitstats

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Poteantal_Features.md  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
benches/: analysis_benchmark.rs
benchmarks/: .gitignore  README.md  index.html
benchmarks/git_comparison/report/: index.html
benchmarks/plotting/report/: index.html
benchmarks/report/: index.html
gitstats/: Cargo.toml  all.html  index.html  sidebar-items.js
gitstats/analysis/: fn.analyze_repo_async.html  fn.get_available_branches.html  index.html  sidebar-items.js  struct.CacheManager.html
gitstats/analysis/cache/: struct.CacheManager.html
gitstats/analysis/git/: fn.analyze_repo_async.html  fn.get_available_branches.html  index.html  sidebar-items.js
gitstats/analysis/ml_pipeline/: fn.detect_anomalies.html  fn.prepare_commit_features.html  index.html  sidebar-items.js  struct.AnomalyDetector.html  struct.CommitAnalyzer.html  struct.CommitFeatures.html
gitstats/app/: fn.draw_ui.html  index.html  sidebar-items.js  struct.App.html  struct.AppWrapper.html
gitstats/app/state/: struct.App.html  struct.AppWrapper.html
gitstats/app/ui/: fn.draw_ui.html
gitstats/plotting/: index.html  sidebar-items.js  struct.ChartStyle.html  struct.ChartTheme.html
gitstats/plotting/chart/: fn.generate_plot_async.html  index.html  sidebar-items.js
gitstats/plotting/styles/: struct.ChartStyle.html  struct.ChartTheme.html
gitstats/src/: main.rs
gitstats/types/: index.html  sidebar-items.js  struct.AnalysisResult.html  struct.CacheKey.html  struct.ProgressEstimate.html
gitstats/utils/: fn.aggregate_data.html  index.html  sidebar-items.js
gitstats/utils/aggregation/: fn.aggregate_data.html
search.desc/gitstats/: gitstats-desc-0-.js
src/: lib.rs  main.rs  types.rs
src/analysis/: cache.rs  git.rs  ml_pipeline.rs  mod.rs  tests.rs
src/app/: mod.rs  state.rs  ui.rs
src/gitstats/: lib.rs.html  types.rs.html
src/gitstats/analysis/: cache.rs.html  git.rs.html  ml_pipeline.rs.html  mod.rs.html
src/gitstats/app/: mod.rs.html  state.rs.html  ui.rs.html
src/gitstats/plotting/: chart.rs.html  mod.rs.html  styles.rs.html
src/gitstats/utils/: aggregation.rs.html  mod.rs.html
src/plotting/: chart.rs  metal_integration.rs  mod.rs  styles.rs  tests.rs
src/utils/: aggregation.rs  mod.rs
tests/: git_comparison_tests.rs  integration_test.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/hash/: trait.Hash.js
(+156 files in other folders)
