[package]
name = "gitstats"
version = "0.1.0"
edition = "2021"
description = "A modern, fast Git repository analyzer and visualization tool"
authors = ["Tripp Cashel <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/tcashel/gitstats"
readme = "README.md"
keywords = ["git", "statistics", "visualization", "analysis", "developer-tools"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
git2 = "0.18.1"
plotters = "0.3.5"
plotters-backend = "0.3.5"
image = "0.25.5"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
futures = "0.3.29"
num_cpus = "1.16.0"
lru = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
tch = "0.13.0"
ndarray = "0.15"
thiserror = "1.0.50"
dirs = "5.0.1"
tempfile = "3.8.1"
rand = "0.8"
statrs = "0.16"
anyhow = "1.0.94"

[dev-dependencies]
tempfile = "3.8.1"
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
criterion = "0.5.1"

[[bench]]
name = "analysis_benchmark"
harness = false

[features]
default = []
# Enable this feature for development with additional logging and debug info
dev = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
